add footer and header

--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Levi, Djaniza, Camila, Thiago, Jaqueline">
-    <title>Cure App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Levi, Djaniza, Camila, Thiago, Jaqueline">
+  <title>Cure App</title>
 
-    
+  <link rel="stylesheet" href="./src/styles/global.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bellota+Text&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/794c36fe09.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Quero doar</li>
-                <li>Farmácia parceira</li>
-            </ul>
-        </nav>
+  <header>
+    <nav>
+      <img id="main-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+        <ul>
+          <li><a class="menu-itens" href="#"><i class="fa-solid fa-house"></i></a></li>
+          <li><a class="menu-itens" href="#">Quero ajudar!</a></li>
+          <li><a class="menu-itens" href="#">Farmácia parceira</a></li>
+          <li><a class="menu-itens" href="#">Pacientes</a></li>
+          <li><a class="menu-itens" href="#">Campanhas</a></li>
+        </ul>
+    </nav>
     </header>
-    <main>
-        <h1>Você pode ajudar a curar!</h1>
-    </main>
+    <footer>
+      <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+    </footer>
 </body>
 </html>
