--- a/pharma-form.html
+++ b/pharma-form.html
@@ -50,9 +50,9 @@
                     <input type="text" name="responsavel" id="responsavel" class="inputUser" required>
                     <label for="responsavel">Responsável</label>
                 </div>
-                <button>Voltar</button> <button>Salvar</button>
-                <p>Já é cadastrado? <button>Faça Login</button></p>
             </fieldset>
+            <button href="index.html">Voltar</button> <button>Salvar</button>
+                <p>Já é cadastrado? <button>Faça Login</button></p>
         </form>
     </div>
 </body>
