--- a/user-form.html
+++ b/user-form.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <div>
-            <img src="img/mulher-afro-alegre-aponta-redimensionado.png" alt="Mulher apontando para o lado direito">
+            <img width="200" src="img/mulher-afro-alegre-aponta-redimensionado.png" alt="Mulher apontando para o lado direito">
         </div>
         <section>
             <p>
@@ -84,7 +84,7 @@
                 <p>
                     <button type="submit">Salvar</button>
                 </p>
-               <a href="index.html"><p><button type="submit">Cancelar</button></p></a>
+               <a href="index.html"><button>Cancelar</button></a>
             </fieldset>
         </form>
     </main>
