reorganize project and fix pharma-form identation

--- a/src/pages/user-form.html
+++ b/src/pages/user-form.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cure App</title>
-</head>
-<body>
-    <header>
-        <img src="" alt="">
-    </header>
-    <main>
+    <div id="subscription-user-page">
         <div>
             <img width="200" src="img/mulher-afro-alegre-aponta-redimensionado.png" alt="Mulher apontando para o lado direito">
         </div>
@@ -88,6 +77,3 @@
             </fieldset>
         </form>
     </main>
-    
-</body>
-</html>
