add main page html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <!--settings-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Levi, Djaniza, Camila, Thiago, Jaqueline">
   <title>Cure App</title>
 
+  <!--styles-->
   <link rel="stylesheet" href="./src/styles/global.css">
 
+  <!--fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bellota+Text&display=swap" rel="stylesheet">
@@ -26,8 +29,10 @@
         </ul>
     </nav>
     </header>
+    <main></main>
     <footer>
       <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
     </footer>
+    <script defer src="./src/scripts/index.js"></script>
 </body>
 </html>
