Exclusão pasta img

--- a/src/pages/pagamento.html
+++ b/src/pages/pagamento.html
@@ -33,7 +33,7 @@
     </header>
     <main id="root">
         <section>
-            <img width="200" src="/img/voluntarios.jpg" alt="Voluntários Reunidos">
+            <img width="200" src="/src/assets/images/voluntarios.jpg" alt="Voluntários Reunidos">
             <h1>Sua doação é essencial!</h1>
         </section>
         <form action="">
