--- a/src/pages/pagamento.html
+++ b/src/pages/pagamento.html
@@ -9,7 +9,7 @@
     <title>Cure App</title>
 
     <!--styles-->
-    <link rel="stylesheet" href="./src/styles/global.css">
+    <link rel="stylesheet" href="../styles/global.css">
 
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav>
-            <img id="main-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+            <img id="main-logo" src="../assets/images/logo.png" alt="logo cure app">
             <ul>
                 <li><a class="menu-itens" href="/" onclick="routes()"><i class="fa-solid fa-house"></i></a></li>
                 <li><a class="menu-itens" href="/suporter" onclick="routes()">Quero ajudar!</a></li>
@@ -33,7 +33,7 @@
     </header>
     <main id="root">
         <section>
-            <img width="200" src="/src/assets/images/voluntarios.jpg" alt="Voluntários Reunidos">
+            <img width="200" src="../assets/images/voluntarios.jpg" alt="Voluntários Reunidos">
             <h1>Sua doação é essencial!</h1>
         </section>
         <form action="">
@@ -118,7 +118,7 @@
         </div>
     </main>
     <footer>
-        <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+        <img id="footer-logo" src="../assets/images/logo.png" alt="logo cure app">
     </footer>
     <script defer src=".src/scripts/router.js"></script>
     <script src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js'></script>
