--- a/src/pages/pharma-form.html
+++ b/src/pages/pharma-form.html
@@ -8,7 +8,7 @@
   <title>Cure App</title>
 
   <!--styles-->
-  <link rel="stylesheet" href="./src/styles/global.css">
+  <link rel="stylesheet" href="../styles/global.css">
 
   <!--fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav>
-      <img id="main-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+      <img id="main-logo" src="../assets/images/logo.png" alt="logo cure app">
         <ul>
           <li><a class="menu-itens" href="/" onclick="routes()"><i class="fa-solid fa-house"></i></a></li>
           <li><a class="menu-itens" href="/suporter" onclick="routes()">Quero ajudar!</a></li>
@@ -31,7 +31,7 @@
     </header>
     <main id="root">
       <div id="subscription-pharma-page">
-        <img src="pharmacy.webp" alt="Farmácia">
+        <img src="../assets/images/pharmacy.webp" alt="Farmácia">
         <div class="box">
         <form action="">
             <fieldset>
@@ -83,8 +83,8 @@
     </div>
   </main>
   <footer>
-    <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+    <img id="footer-logo" src="../assets/images/logo.png" alt="logo cure app">
   </footer>
-  <script defer src=".src/scripts/router.js"></script>
+  <script defer src="..src/scripts/router.js"></script>
 </body>
 </html>
