--- a/src/pages/user-form.html
+++ b/src/pages/user-form.html
@@ -8,7 +8,7 @@
   <title>Cure App</title>
 
   <!--styles-->
-  <link rel="stylesheet" href="./src/styles/global.css">
+  <link rel="stylesheet" href="../styles/global.css">
 
   <!--fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav>
-      <img id="main-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+      <img id="main-logo" src="../assets/images/logo.png" alt="logo cure app">
         <ul>
           <li><a class="menu-itens" href="/" onclick="routes()"><i class="fa-solid fa-house"></i></a></li>
           <li><a class="menu-itens" href="/suporter" onclick="routes()">Quero ajudar!</a></li>
@@ -32,7 +32,7 @@
     <main id="root">
       <div id="subscription-user-page">
       <div>
-      <img width="200" src="img/mulher-afro-alegre-aponta-redimensionado.png" alt="Mulher apontando para o lado direito">
+      <img width="200" src="../assets/images/mulher-afro-alegre-aponta-redimensionado.png" alt="Mulher apontando para o lado direito">
       </div>
       <section>
         <p>
@@ -110,8 +110,8 @@
       </form>
     </main>
     <footer>
-      <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
+      <img id="footer-logo" src="../assets/images/logo.png" alt="logo cure app">
     </footer>
-    <script defer src=".src/scripts/router.js"></script>
+    <script defer src="..src/scripts/router.js"></script>
   </body>
 </html> 
