adiciona componente header

--- a/src/pages/campaign.html
+++ b/src/pages/campaign.html
@@ -15,18 +15,10 @@
      <script src="https://kit.fontawesome.com/794c36fe09.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <nav>
-        <img id="main-logo" src="../assets/images/logo.png" alt="logo cure app">
-          <ul>
-            <li><a class="menu-itens" href="/" onclick="routes()"><i class="fa-solid fa-house"></i></a></li>
-            <li><a class="menu-itens" href="/suporter" onclick="routes()">Quero ajudar!</a></li>
-            <li><a class="menu-itens" href="/pharm" onclick="routes()">Farmácia parceira</a></li>
-            <li><a class="menu-itens" href="/paciente" onclick="routes()">Pacientes</a></li>
-            <li><a class="menu-itens" href="/campaigns" onclick="routes()">Campanhas</a></li>
-          </ul>
-      </nav>
-      </header>
+    <cure-header 
+      options="home,suporter,pharmacy,user,campaign,login"
+      origin="page"
+    ></cure-header>
     <main>
       <section>
         <p>CURE UMA PESSOA FAZENDO SUA DOAÇÃO</p>
@@ -44,6 +36,8 @@
     <ul>
       <li><a class="option-itens" href="#">Doar agora</a></li>
     </ul>
+    <script defer src="../components/CureHeader/CureHeader.js"></script>
+    <script src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js'></script>
   </body>
   <footer>
     <img id="footer-logo" src="../assets/images/logo.png" alt="logo cure app">
