--- a/index.html
+++ b/index.html
@@ -17,22 +17,15 @@
   <script src="https://kit.fontawesome.com/794c36fe09.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <nav>
-      <img id="main-logo" src="./src/assets/images/logo.png" alt="logo cure app">
-        <ul>
-          <li><a class="menu-itens" href="/" onclick="routes()"><i class="fa-solid fa-house"></i></a></li>
-          <li><a class="menu-itens" href="/suporter" onclick="routes()">Quero ajudar!</a></li>
-          <li><a class="menu-itens" href="/pharm" onclick="routes()">Farmácia parceira</a></li>
-          <li><a class="menu-itens" href="/paciente" onclick="routes()">Pacientes</a></li>
-          <li><a class="menu-itens" href="/campaigns" onclick="routes()">Campanhas</a></li>
-        </ul>
-    </nav>
-    </header>
-    <main id="root"></main>
+    <cure-header
+      options="home,suporter,pharmacy,user,campaign,login"
+      origin="main"
+    ></cure-header>
+    <main></main>
     <footer>
       <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
     </footer>
-    <script defer src=".src/scripts/router.js"></script>
+    <script defer src="./src/components/CureHeader/CureHeader.js"></script>
+    <script src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js'></script>
 </body>
 </html>
