adiciona estilo da mainpage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <!--styles-->
   <link rel="stylesheet" href="./src/styles/global.css">
+  <link rel="stylesheet" href="./src/styles/main.css">
+
 
   <!--fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +23,46 @@
       options="home,suporter,pharmacy,user,campaign,login"
       origin="main"
     ></cure-header>
-    <main></main>
+    <main>
+      <div id="first-section">
+        <h1>VOCÊ PODE AJUDAR A CURAR ALGUÉM!</h1>
+      </div>
+      <div class="second-section">
+        <h2>MISSÃO</h2>
+        <p>Nossa missão é conectar pessoas, é levar medicamento a quem precisa de forma legal e segura, e você pode ajudar!</p>
+        <span><i class="fa-solid fa-hand-holding-hand"></i></span>
+      </div>
+      <div id="third-section">
+        <div class="inner-container">
+          <h2>QUEM RECEBE AJUDA?</h2>
+          <p>Pessoas que tem necessidade de algum medicamento, para tratamento pontual ou contínuo, e fornecem a documentação solicitada são cadastradas em nossa base de dados e podem abrir uma campanha de arrecadação.</p>
+        </div>
+      </div>
+      <div class="second-section">
+        <h2>QUEM ENTREGA OS MEDICAMENTOS?</h2>
+        <p>Trabalhamos com uma rede de farmácias parceiras, essas farmácias oferecem descontos especiais e entregam o produto ao paciente que solicitou a arrecadação. A farmácia pode também fazer a entrega domiciliar em casos onde a necessidade.</p>
+      </div>
+      <div id="fifth-section">
+        <div class="inner-container">
+          <h2>QUEM RECEBE AJUDA?</h2>
+          <p>Pessoas que tem necessidade de algum medicamento, para tratamento pontual ou contínuo, e fornecem a documentação solicitada são cadastradas em nossa base de dados e podem abrir uma campanha de arrecadação.</p>
+        </div>
+      </div>
+      <div id="button-section">
+        <div class="button-container">
+          <p>Quero Ajudar!</p>
+          <span><i class="fa-solid fa-hand-holding-heart"></i></span>
+        </div>
+        <div class="button-container">
+          <p>Preciso de medicamento</p>
+          <span><i class="fa-solid fa-heart-pulse"></i></span>
+        </div>
+        <div class="button-container">
+          <p>Quero ser farmácia parceira</p>
+          <span><i class="fa-solid fa-pills"></i></span>
+        </div>
+      </div>
+    </main>
     <footer>
       <img id="footer-logo" src="./src/assets/images/logo.png" alt="logo cure app">
     </footer>
