"estilização do pharma"

--- a/src/pages/pharma-form.html
+++ b/src/pages/pharma-form.html
@@ -9,7 +9,7 @@
 
   <!--styles-->
   <link rel="stylesheet" href="../styles/global.css">
-
+  <link rel="stylesheet" href="../styles/pharma.css">
   <!--fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,6 @@
     ></cure-header>
     <main id="root">
       <div id="subscription-pharma-page">
-        <img src="../assets/images/pharmacy.webp" alt="Farmácia">
         <div class="box">
         <form action="">
             <fieldset>
@@ -68,8 +67,9 @@
                     <input type="text" name="responsavel" id="responsavel" class="inputUser" required>
                 </div>
             </fieldset>
-            <button><a href="index.html">Voltar</a></button> <button>Salvar</button> 
-            <p>Já é cadastrado? <button>Faça Login</button></p>
+            <button><a href="index.html">Voltar</a></button> 
+            <button>Salvar</button> 
+            <button>Faça Login</button></p>
         </form>
         </div>
     </div>
@@ -80,4 +80,3 @@
   <script defer src="../components/CureHeader/CureHeader.js"></script>
   <script src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js'></script>
 </body>
-</html>
