--- a/src/pages/user-form.html
+++ b/src/pages/user-form.html
@@ -24,52 +24,55 @@
   ></cure-header>
     <main id="root">
       <div id="subscription-user-page">
-      <div>
-      <img width="200" src="../assets/images/pilula-coracao-form.jpeg" alt="Frasco de pilulas em formato de coração">
-      </div>
+      
       <section>
-        <p>
-          Olá. Logo abaixo precisamos que você preencha corretamente os seus dados e aperte o botão salvar. Lembre-se que para o recebimento do medicamento é necessário ter posse da receita médica!
-        </p>
-      </section>
-      <form action="">
         <div>
-          <label for="info_1">Nome Completo</label>
-          <input type="text" id="info_1" name="nome completo"><br>
-          <label for="info_2">Data de Nascimento</label>
-          <input type="date" id="info_2" name="data de nascimento"><br>
-          <label for="info_3">Naturalidade</label>
-          <input type="text" name="nacionalidade" id="info_3"><br>
-          <label for="info_4">CPF</label>
-          <input type="text" name="cpf" id="info_4" ><br>
-          <label for="info_5">RG</label>
-          <input type="text" name="rg" id="info_5"><br>
-          <label for="info_6">Endereço</label>
-          <input type="text" name="endereço" id="info_6"><br>
-          <label for="info_7">CEP</label>
-          <input type="text" name="cep" id="info_7"><br>
-          <label for="info_8">N°</label>
-          <input type="text" name="n" id="info_8"><br>
-          <label for="info_9">Complemento</label>
-          <input type="text" name="complemento" id="info_9"><br>
-          <label for="info_10">Bairro</label>
-          <input type="text" name="bairro" id="info_10"><br>
-          <label for="info_11">Cidade</label>
-          <input type="text" name="cidade" id="info_11"><br>
-          <label for="info_12">Estado</label>
-          <input type="text" name="estado" id="info_12"><br>
-          <label for="info_13">Telefone</label>
-          <input type="tel" name="telefone" id="info_13"><br>
-          <label for="info_14">Email</label>
-          <input type="email" name="email" id="info_14"><br>
-          <label for="info_15">Senha</label>
-          <input type="password" name="senha" id="info_15"><br>
-          <label for="info_16">Confirmar Senha</label>
-          <input type="password" name="confirmar senha" id="info_16"><br>
-          <button type="submit">Voltar</button>
-          <button type="button">Salvar</button>
-          </div>
-      </form>
+          <img class="image" src="../assets/images/pilula-coracao-form.jpeg" alt="Frasco de pilulas em formato de coração">
+        </div>
+        <div class="right">
+          <p class="text1">
+            Olá. Logo abaixo precisamos que você preencha corretamente os seus dados e aperte o botão salvar. Lembre-se que para o recebimento do medicamento é necessário ter posse da receita médica!
+          </p>
+          <form action="">
+            <div>
+              <label for="info_1">Nome Completo</label><br>
+              <input type="text" id="info_1" name="nome completo"><br>
+              <label for="info_2">Data de Nascimento</label><br>
+              <input type="date" id="info_2" name="data de nascimento"><br>
+              <label for="info_3">Naturalidade</label><br>
+              <input type="text" name="nacionalidade" id="info_3"><br>
+              <label for="info_4">CPF</label><br>
+              <input type="text" name="cpf" id="info_4" ><br>
+              <label for="info_5">RG</label><br>
+              <input type="text" name="rg" id="info_5"><br>
+              <label for="info_6">Endereço</label><br>
+              <input type="text" name="endereço" id="info_6"><br>
+              <label for="info_7">CEP</label><br>
+              <input type="text" name="cep" id="info_7"><br>
+              <label for="info_8">N°</label><br>
+              <input type="text" name="n" id="info_8"><br>
+              <label for="info_9">Complemento</label><br>
+              <input type="text" name="complemento" id="info_9"><br>
+              <label for="info_10">Bairro</label><br>
+              <input type="text" name="bairro" id="info_10"><br>
+              <label for="info_11">Cidade</label><br>
+              <input type="text" name="cidade" id="info_11"><br>
+              <label for="info_12">Estado</label><br>
+              <input type="text" name="estado" id="info_12"><br>
+              <label for="info_13">Telefone</label><br>
+              <input type="tel" name="telefone" id="info_13"><br>
+              <label for="info_14">Email</label><br>
+              <input type="email" name="email" id="info_14"><br>
+              <label for="info_15">Senha</label><br>
+              <input type="password" name="senha" id="info_15"><br>
+              <label for="info_16">Confirmar Senha</label><br>
+              <input type="password" name="confirmar senha" id="info_16"><br>
+              <button type="submit">Voltar</button>
+              <button type="button">Salvar</button>
+              </div>
+          </form>
+        </div>
+      </section>
     </main>
     <footer>
       <img id="footer-logo" src="../assets/images/logo.png" alt="logo cure app">
