centralizando elementos da section 2

--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -27,15 +27,15 @@
     
     <main class="display-main" id="root">
         <div class="first-display" id="subscription-perfil-page">
-            <section>
-                <img class="image-perfil" src="../assets/images/close-up-asian-woman-outdoors_23-2149032780.avif" alt="mulher asiática">
+            <section class="sect-one">
+                <!-- <img class="image-perfil" src="../assets/images/close-up-asian-woman-outdoors_23-2149032780.avif" alt="mulher asiática"> -->
                 <div class="name-perfil">
                     <p class="different-font">JANE DOE</p>
                 </div>
                 <div class="options-flex">
                     <img src="../assets/images/vector-settings.png" alt="vector-settings">
                     <img src="../assets/images/vector-edit.png" alt="vector-edit">
-                    <a class="link-a" href="">FALE CONOSCO</a>
+                    <a class="link-a" href="">FALE<br>CONOSCO</a>
                 </div>
                 <div class="campaign-flex">
                     <div>
@@ -54,26 +54,35 @@
                     <button>Solicitar Medicamento</button>
                 </div>
             </section>
-            <section>
-                <h6 class="element-h3">CAMPANHAS ATIVAS</h6>
+            <section class="sect-two">
+                <p class="element-h3">CAMPANHAS ATIVAS</p>
                 <div class="group-campaign">
-                    <img src="../assets/images/vector-figure.png" alt="vector-figure">
-                    <div>
+                    <div class="ajust-image">
+                        <img src="../assets/images/vector-figure.png" alt="vector-figure">
+                        <p>Paracetamol 750mg</p>
+                    </div>
+                    <div class="ajust">
                         <p>Data de Expiração: xx/xx/xxxx </p>
                         <p>Percentual Alcançado: xx%</p>
                     </div>
                 </div>
                 <div class="group-campaign">
-                    <img src="../assets/images/vector-figure.png" alt="vector-figure">
-                    <div>
+                    <div class="ajust-image">
+                        <img src="../assets/images/vector-figure.png" alt="vector-figure">
+                        <p>Paracetamol 750mg</p>
+                    </div>
+                    <div class="ajust">
                         <p>Data de Expiração: xx/xx/xxxx </p>
                         <p>Percentual Alcançado: xx%</p>
                     </div>
                 </div>
-                <h6 class="element-h3">AGUARDANDO APROVAÇÃO</h6>
+                <p class="element-h3">AGUARDANDO APROVAÇÃO</p>
                 <div class="group-campaign">
-                    <img src="../assets/images/vector-figure.png" alt="vector-figure">
-                    <div>
+                    <div class="ajust-image">
+                        <img src="../assets/images/vector-figure.png" alt="vector-figure">
+                        <p>Paracetamol 750mg</p>
+                    </div>
+                    <div class="ajust">
                         <p>Data de Expiração: xx/xx/xxxx </p>
                         <p>Percentual Alcançado: xx%</p>
                     </div>
