div principal finalizada

--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -55,36 +55,36 @@
                 </div>
             </section>
             <section class="sect-two">
-                <p class="element-h3">CAMPANHAS ATIVAS</p>
+                <p class="element-p">CAMPANHAS ATIVAS</p>
                 <div class="group-campaign">
-                    <div class="ajust-image">
-                        <img src="../assets/images/vector-figure.png" alt="vector-figure">
-                        <p>Paracetamol 750mg</p>
+                    <div class="ajust-bloco">
+                        <img class="ajust-image" src="../assets/images/vector-figure.png" alt="vector-figure">
+                        <p class="size-p">Paracetamol 750mg</p>
                     </div>
-                    <div class="ajust">
-                        <p>Data de Expiração: xx/xx/xxxx </p>
-                        <p>Percentual Alcançado: xx%</p>
+                    <div>
+                        <p class="ajust">Data de Expiração: xx/xx/xxxx </p>
+                        <p class="ajust">Percentual Alcançado: XX%</p>
                     </div>
                 </div>
                 <div class="group-campaign">
-                    <div class="ajust-image">
-                        <img src="../assets/images/vector-figure.png" alt="vector-figure">
-                        <p>Paracetamol 750mg</p>
+                    <div class="ajust-bloco">
+                        <img class="ajust-image" src="../assets/images/vector-figure.png" alt="vector-figure">
+                        <p class="size-p">Paracetamol 750mg</p>
                     </div>
-                    <div class="ajust">
-                        <p>Data de Expiração: xx/xx/xxxx </p>
-                        <p>Percentual Alcançado: xx%</p>
+                    <div>
+                        <p class="ajust">Data de Expiração: xx/xx/xxxx </p>
+                        <p class="ajust">Percentual Alcançado: XX%</p>
                     </div>
                 </div>
-                <p class="element-h3">AGUARDANDO APROVAÇÃO</p>
+                <p class="element-p" id="element-aprov">AGUARDANDO APROVAÇÃO</p>
                 <div class="group-campaign">
-                    <div class="ajust-image">
-                        <img src="../assets/images/vector-figure.png" alt="vector-figure">
-                        <p>Paracetamol 750mg</p>
+                    <div class="ajust-bloco">
+                        <img class="ajust-image" src="../assets/images/vector-figure.png" alt="vector-figure">
+                        <p class="size-p">Paracetamol 750mg</p>
                     </div>
-                    <div class="ajust">
-                        <p>Data de Expiração: xx/xx/xxxx </p>
-                        <p>Percentual Alcançado: xx%</p>
+                    <div>
+                        <p class="ajust">Data de Expiração: xx/xx/xxxx </p>
+                        <p class="ajust">Percentual Alcançado: XX%</p>
                     </div>
                 </div>
             </section>
