ajusta conteúdo home

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       </div>
       <div id="fifth-section">
         <div class="inner-container">
-          <h2>QUEM RECEBE AJUDA?</h2>
-          <p>Pessoas que tem necessidade de algum medicamento, para tratamento pontual ou contínuo, e fornecem a documentação solicitada são cadastradas em nossa base de dados e podem abrir uma campanha de arrecadação.</p>
+          <h2>QUEM PODE AJUDAR?</h2>
+          <p>Qualquer pessoa maior de 18 anos, basta selecionar uma campanha e preencher o formulário de pagamento. Você não precisa se identificar se não quiser!</p>
         </div>
       </div>
       <div id="button-section">
