--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bellota+Text&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/794c36fe09.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -49,15 +50,15 @@
         </div>
       </div>
       <div id="button-section">
-        <div class="button-container">
+        <div class="button-container" onclick="window.location.href = './src/pages/campaign.html'">
           <p>Quero Ajudar!</p>
           <span><i class="fa-solid fa-hand-holding-heart"></i></span>
         </div>
-        <div class="button-container">
+        <div class="button-container" onclick="window.location.href = './src/pages/user-form.html'">
           <p>Preciso de medicamento</p>
           <span><i class="fa-solid fa-heart-pulse"></i></span>
         </div>
-        <div class="button-container">
+        <div class="button-container" onclick="window.location.href = './src/pages/pharma-form.html'">
           <p>Quero ser farmácia parceira</p>
           <span><i class="fa-solid fa-pills"></i></span>
         </div>
